<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="350dp"
    android:minHeight="250dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/close_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp"
        android:gravity="center"
        android:drawableTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_baseline_clear_24"
        android:textStyle="bold"
        android:text="@string/cancel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="20sp"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/pop_text"/>

    <Button
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/positive"
         />

</LinearLayout>