<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubmissionActivity">
        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FF7F00"
            android:textSize="25sp"
            android:background="@drawable/gradient_layer"
            style="bold"
            android:text="@string/project_submission"
           />
        <LinearLayout
            android:layout_marginTop="70dp"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firtsname"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_below="@+id/text_view"
                android:layout_margin="15dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:layout_weight="0.5"
                android:hint="@string/first_name"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="0.5"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:hint="@string/last_name"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/border"
        android:hint="@string/email"
        android:paddingLeft="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/gitlink"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/border"
        android:hint="@string/gitlink"
        android:paddingLeft="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        android:text="SUBMIT"
        android:background="@drawable/submit_button"/>


</LinearLayout>