<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:elevation="20dp"
        app:cardElevation="20dp"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop"
        android:layout_marginStart="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/alcbadge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:id="@+id/container"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    app:layout_constraintHorizontal_weight="2"
                    android:text="@string/gilbert"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#90000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                               <TextView
                    android:id="@+id/score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:layout_marginStart="5dp"
                    app:layout_constraintHorizontal_weight="2"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    android:text="@string/skill"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:textSize="12sp"
                    android:text="@string/country"
                    app:layout_constraintStart_toEndOf="@id/score"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:ignore="RtlSymmetry" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>